frame/support/test/tests/pallet_ui/inconsistent_instance_2.stderr
error: Invalid generic declaration, trait is defined without instance but generic use some
  --> $DIR/inconsistent_instance_2.rs:16:7
   |
16 |     impl<T: Trait<I>, I: 'static> Module<T, I> {}
   |          ^

error: Invalid generic declaration, trait is defined without instance but generic use some
  --> $DIR/inconsistent_instance_2.rs:16:32
   |
16 |     impl<T: Trait<I>, I: 'static> Module<T, I> {}
   |                                   ^^^^^^

error: Invalid generic declaration, trait is defined without instance but generic use some
  --> $DIR/inconsistent_instance_2.rs:10:20
   |
10 |     pub struct Module<T, I = ()>(core::marker::PhantomData<(T, I)>);
   |                       ^

error: Invalid generic declaration, trait is defined without instance but generic use some
  --> $DIR/inconsistent_instance_2.rs:13:71
   |
13 |     impl<T: Trait<I>, I: 'static> ModuleInterface<BlockNumberFor<T>> for Module<T, I> {}
   |                                                                          ^^^^^^

error: Invalid generic declaration, trait is defined without instance but generic use some
  --> $DIR/inconsistent_instance_2.rs:13:7
   |
13 |     impl<T: Trait<I>, I: 'static> ModuleInterface<BlockNumberFor<T>> for Module<T, I> {}
   |          ^
